// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CsaaAutoIdCardComponent should create a snapshot 1`] = `
<csaa-auto-id-card
  __ngContext__={[Function LRootView]}
  cardContent={[Function Object]}
  customerSearch={[Function Object]}
  datePipe={[Function DatePipe]}
  drivers={[Function Array]}
  insureds={[Function Array]}
  policyNumber={[Function String]}
  riskState={[Function String]}
  termEffectiveDate={[Function String]}
  termExpirationDate={[Function String]}
  toggle={[Function EventEmitter_]}
  vehicle={[Function Object]}
>
  <div
    class="poi-card"
  >
    <ion-grid>
      <ion-row
        class="row--heading"
      >
        <ion-col
          class="ion-text-start card-logo"
          size="auto"
        >
          <img
            src="/assets/csaa-mobile/vectors/aaa-logo.svg"
          />
        </ion-col>
        <ion-col
          size="10"
        >
          <p>
            CSAA Fire & Casualty Insurance Company / NAIC #10921
          </p>
          <p>
            PO Box 24511, Oakland, CA 94623-9865
          </p>
          <p>
            800-207-3618
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--title"
      >
        <ion-col>
          <h1>
            WY Insurance Identification Card
          </h1>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              NAMED INSURED
            </span>
            <span>
               Jean Brandos 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              POLICY #
            </span>
            <span>
               WYSS910014303 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE YEAR / MAKE / MODEL
            </span>
            <span>
               Lamborghini Gallardo 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EFFECTIVE DATE
            </span>
            <span>
               May 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE ID#
            </span>
            <span>
               WAUKJAFM8AA061319 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EXPIRATION DATE
            </span>
            <span>
               Nov 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
    </ion-grid>
  </div>
</csaa-auto-id-card>
`;

exports[`CsaaAutoIdCardComponent should match a snapshot for CA 1`] = `
<csaa-auto-id-card
  __ngContext__={[Function LRootView]}
  cardContent={[Function Object]}
  customerSearch={[Function Object]}
  datePipe={[Function DatePipe]}
  drivers={[Function Array]}
  insureds={[Function Array]}
  policyNumber={[Function String]}
  riskState={[Function String]}
  termEffectiveDate={[Function String]}
  termExpirationDate={[Function String]}
  toggle={[Function EventEmitter_]}
  vehicle={[Function Object]}
>
  <div
    class="poi-card"
  >
    <ion-grid>
      <ion-row
        class="row--heading"
      >
        <ion-col
          class="ion-text-start card-logo"
          size="auto"
        >
          <img
            src="/assets/csaa-mobile/vectors/aaa-logo.svg"
          />
        </ion-col>
        <ion-col
          size="10"
        >
          <p>
            CSAA Fire & Casualty Insurance Company / NAIC #10921
          </p>
          <p>
            PO Box 24511, Oakland, CA 94623-9865
          </p>
          <p>
            800-207-3618
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--title"
      >
        <ion-col>
          <h1>
            CA Insurance Identification Card
          </h1>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              NAMED INSURED
            </span>
            <span>
               Jean Brandos 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              POLICY #
            </span>
            <span>
               WYSS910014303 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE YEAR / MAKE / MODEL
            </span>
            <span>
               Lamborghini Gallardo 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EFFECTIVE DATE
            </span>
            <span>
               May 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE ID#
            </span>
            <span>
               WAUKJAFM8AA061319 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EXPIRATION DATE
            </span>
            <span>
               Nov 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
               This insurance complies with CVC §16056 or §16500.5 
            </span>
          </p>
        </ion-col>
      </ion-row>
    </ion-grid>
  </div>
</csaa-auto-id-card>
`;

exports[`CsaaAutoIdCardComponent should match a snapshot for KY 1`] = `
<csaa-auto-id-card
  __ngContext__={[Function LRootView]}
  cardContent={[Function Object]}
  customerSearch={[Function Object]}
  datePipe={[Function DatePipe]}
  drivers={[Function Array]}
  insureds={[Function Array]}
  policyNumber={[Function String]}
  riskState={[Function String]}
  termEffectiveDate={[Function String]}
  termExpirationDate={[Function String]}
  toggle={[Function EventEmitter_]}
  vehicle={[Function Object]}
>
  <div
    class="poi-card"
  >
    <ion-grid>
      <ion-row
        class="row--heading"
      >
        <ion-col
          class="ion-text-start card-logo"
          size="auto"
        >
          <img
            src="/assets/csaa-mobile/vectors/aaa-logo.svg"
          />
        </ion-col>
        <ion-col
          size="10"
        >
          <p>
            CSAA Fire & Casualty Insurance Company / NAIC #10921
          </p>
          <p>
            PO Box 24511, Oakland, CA 94623-9865
          </p>
          <p>
            800-207-3618
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--title"
      >
        <ion-col>
          <h1>
            COMMONWEALTH OF KENTUCKY
          </h1>
          <span
            class="subtitle"
          >
            PROOF OF INSURANCE
          </span>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              NAMED INSURED
            </span>
            <span>
               Jean Brandos 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              POLICY #
            </span>
            <span>
               WYSS910014303 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE YEAR / MAKE / MODEL
            </span>
            <span>
               Lamborghini Gallardo 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EFFECTIVE DATE
            </span>
            <span>
               May 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE ID#
            </span>
            <span>
               WAUKJAFM8AA061319 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EXPIRATION DATE
            </span>
            <span>
               Nov 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
    </ion-grid>
  </div>
</csaa-auto-id-card>
`;

exports[`CsaaAutoIdCardComponent should match a snapshot for NJ 1`] = `
<csaa-auto-id-card
  __ngContext__={[Function LRootView]}
  cardContent={[Function Object]}
  customerSearch={[Function Object]}
  datePipe={[Function DatePipe]}
  drivers={[Function Array]}
  insureds={[Function Array]}
  policyNumber={[Function String]}
  riskState={[Function String]}
  termEffectiveDate={[Function String]}
  termExpirationDate={[Function String]}
  toggle={[Function EventEmitter_]}
  vehicle={[Function Object]}
>
  <div
    class="poi-card"
  >
    <ion-grid>
      <ion-row
        class="row--heading"
      >
        <ion-col
          class="ion-text-start card-logo"
          size="auto"
        >
          <img
            src="/assets/csaa-mobile/vectors/aaa-logo.svg"
          />
        </ion-col>
        <ion-col
          size="10"
        >
          <p>
            CSAA Fire & Casualty Insurance Company / NAIC #10921
          </p>
          <p>
            PO Box 24511, Oakland, CA 94623-9865
          </p>
          <p>
            800-207-3618
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--title"
      >
        <ion-col>
          <h1>
            STATE OF NEW JERSEY 
   INSURANCE IDENTIFICATION CARD
          </h1>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              NAMED INSURED
            </span>
            <span>
               Jean Brandos 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              POLICY #
            </span>
            <span>
               WYSS910014303 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE YEAR / MAKE / MODEL
            </span>
            <span>
               Lamborghini Gallardo 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EFFECTIVE DATE
            </span>
            <span>
               May 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE ID#
            </span>
            <span>
               WAUKJAFM8AA061319 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EXPIRATION DATE
            </span>
            <span>
               Nov 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              ADDRESS
            </span>
          </p>
          <ion-row>
            <span>
               30 N Piney Rd 
            </span>
          </ion-row>
          <ion-row>
            <span>
            </span>
          </ion-row>
          <ion-row>
            <span>
               Story, NJ 82832 
            </span>
          </ion-row>
        </ion-col>
      </ion-row>
    </ion-grid>
  </div>
</csaa-auto-id-card>
`;

exports[`CsaaAutoIdCardComponent should match a snapshot for NV 1`] = `
<csaa-auto-id-card
  __ngContext__={[Function LRootView]}
  cardContent={[Function Object]}
  customerSearch={[Function Object]}
  datePipe={[Function DatePipe]}
  drivers={[Function Array]}
  insureds={[Function Array]}
  policyNumber={[Function String]}
  riskState={[Function String]}
  termEffectiveDate={[Function String]}
  termExpirationDate={[Function String]}
  toggle={[Function EventEmitter_]}
  vehicle={[Function Object]}
>
  <div
    class="poi-card"
  >
    <ion-grid>
      <ion-row
        class="row--heading"
      >
        <ion-col
          class="ion-text-start card-logo"
          size="auto"
        >
          <img
            src="/assets/csaa-mobile/vectors/aaa-logo.svg"
          />
        </ion-col>
        <ion-col
          size="10"
        >
          <p>
            CSAA Fire & Casualty Insurance Company / NAIC #10921
          </p>
          <p>
            PO Box 24511, Oakland, CA 94623-9865
          </p>
          <p>
            800-207-3618
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--title"
      >
        <ion-col>
          <h1>
            NV Insurance Identification Card
          </h1>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              NAMED INSURED
            </span>
            <span>
               Jean Brandos 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              POLICY #
            </span>
            <span>
               WYSS910014303 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE YEAR / MAKE / MODEL
            </span>
            <span>
               Lamborghini Gallardo 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EFFECTIVE DATE
            </span>
            <span>
               May 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE ID#
            </span>
            <span>
               WAUKJAFM8AA061319 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EXPIRATION DATE
            </span>
            <span>
               Nov 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              ADDRESS
            </span>
          </p>
          <ion-row>
            <span>
               30 N Piney Rd 
            </span>
          </ion-row>
          <ion-row>
            <span>
            </span>
          </ion-row>
          <ion-row>
            <span>
               Story, NV 82832 
            </span>
          </ion-row>
        </ion-col>
      </ion-row>
    </ion-grid>
  </div>
</csaa-auto-id-card>
`;

exports[`CsaaAutoIdCardComponent should match a snapshot for OK 1`] = `
<csaa-auto-id-card
  __ngContext__={[Function LRootView]}
  cardContent={[Function Object]}
  customerSearch={[Function Object]}
  datePipe={[Function DatePipe]}
  drivers={[Function Array]}
  insureds={[Function Array]}
  policyNumber={[Function String]}
  riskState={[Function String]}
  termEffectiveDate={[Function String]}
  termExpirationDate={[Function String]}
  toggle={[Function EventEmitter_]}
  vehicle={[Function Object]}
>
  <div
    class="poi-card"
  >
    <ion-grid>
      <ion-row
        class="row--heading"
      >
        <ion-col
          class="ion-text-start card-logo"
          size="auto"
        >
          <img
            src="/assets/csaa-mobile/vectors/aaa-logo.svg"
          />
        </ion-col>
        <ion-col
          size="10"
        >
          <p>
            CSAA Fire & Casualty Insurance Company / NAIC #10921
          </p>
          <p>
            PO Box 24511, Oakland, CA 94623-9865
          </p>
          <p>
            800-207-3618
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--title"
      >
        <ion-col>
          <h1>
            OK SECURITY VERIFICATION FORM
          </h1>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              NAMED INSURED
            </span>
            <span>
               Jean Brandos 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              POLICY #
            </span>
            <span>
               WYSS910014303 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE YEAR / MAKE / MODEL
            </span>
            <span>
               Lamborghini Gallardo 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EFFECTIVE DATE
            </span>
            <span>
               May 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              VEHICLE ID#
            </span>
            <span>
               WAUKJAFM8AA061319 
            </span>
          </p>
        </ion-col>
        <ion-col
          size="4"
        >
          <p>
            <span>
              EXPIRATION DATE
            </span>
            <span>
               Nov 17, 2021 
            </span>
          </p>
        </ion-col>
      </ion-row>
      <ion-row
        class="row--content"
      >
        <ion-col
          size="8"
        >
          <p>
            <span>
              EXCLUDED DRIVERS
            </span>
            <span>
               Judy Quinn 
            </span>
          </p>
        </ion-col>
      </ion-row>
    </ion-grid>
  </div>
</csaa-auto-id-card>
`;
